test/test34.error
Error: declared sub argument 'space' as type 'void' on line 0 of file 'test/test34.bas'
