test/test34.bas
sub main(space as void)
end
